feat: add get quotes endpoint
