# src/config/swagger.yaml
@@ -742,6 +742,94 @@ paths:
                   message:
                     type: string
                     required: true
+  /quotes/{page}:
+    get:
+      tags:
+        - Quote
+      security:
+        - bearerAuth: []
+      parameters: 
+        - in: path
+          name: page
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Get quotes successfully!
+          content:
+            application/json:
+              example:
+                  - _id: 62a86e06451633b832d24238
+                    quoteEn: You have to leave something behind to go forward
+                    quoteGe: წინ წასასვლელად რაღაც უნდა დატოვო
+                    image: http://localhost:8080/storage\img\2022-08-01T11-02-23.061Z-interstellar.png
+                    movie:
+                      _id: 62a86e06451633b832d24238
+                      nameEn: Interstellar
+                      nameGe: ინტერსტელარი
+                      tags:
+                        - drama
+                      directorEn: Christopher Nolan
+                      directorGe: კრისტოფერ ნოლანი
+                      descriptionEn: When Earth becomes uninhabitable in the future, a farmer and ex-NASA pilot, Joseph Cooper, is tasked to pilot a spacecraft, along with a team of researchers, to find a new planet for humans.
+                      descriptionGe: კოსმონავტების ჯგუფი გამოუცნობი სამყაროს გამოსაკვლევად მიემართება და თავისი ხომალდით დედამიწასთან ახლოს მდებარე შავ ხვრელში შეფრინდებიან. ის მათ საშუალებას მისცემს გადაადგილდნენ წარმოუდგენელ მანძილებზე...
+                      image: http://localhost:8080/storage\img\2022-08-01T11-02-23.061Z-interstellar.png
+                    createdBy: 
+                      id: 62a86e06451633b832d24238
+                      username: testuser
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    _id:
+                      type: string
+                      required: true
+                    quoteEn:
+                      type: string
+                      required: true
+                    image:
+                      type: string
+                      required: true
+                    movie:
+                      type: object
+                      required: true
+                      properties:
+                        _id:
+                          type: string
+                          required: true
+                        nameEn:
+                          type: string
+                          required: true
+                        nameGe:
+                          type: string
+                          required: true
+                        tags:
+                          type: array
+                          required: true
+                        directorEn:
+                          type: string
+                          required: true
+                        directorGe:
+                          type: string
+                          required: true
+                        descriptionEn:
+                          type: string
+                          required: true
+                        descriptionGe:
+                          type: string
+                          required: true
+                        image:
+                          type: string
+                          required: true
+                    createdBy:
+                      type: object
+                      required: true
+                      properties:
+                        id: 
+                          type: string
+                        username: 
+                          type: string
   /quote:
     post:
       tags:
